--- a/dcool/src/main/resources/application.properties
+++ b/dcool/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #服务端口
 server.port=8033
+#spring.resources.static-locations= file: D:/springboot/upload
 
 #freemarker
 spring.freemarker.allow-request-override=false
@@ -23,4 +24,22 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false  
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+###文件上传 springboot版本2.0.4
+#是否启用文件上传功能
+spring.servlet.multipart.enabled=true
+#指定文件写入磁盘后的阈值，默认为0
+spring.servlet.multipart.file-size-threshold=0
+#指定文件的位置, 没有指定时会自动创建一个临时文件夹
+spring.servlet.multipart.location=D:/springboot/upload
+#指定上传文件大小， 默认1M
+spring.servlet.multipart.max-file-size=50Mb
+#指定multipart / form-data请求允许的最大大小， 默认10M
+spring.servlet.multipart.max-request-size=100Mb
+#是否在文件或参数访问时懒惰地解析多部分请求
+spring.servlet.multipart.resolve-lazily=false
+
+#图片上传路径映射 自定义属性
+upload.picture.path=D:/springboot/upload/
+
 
