photo upload and show
finish photo upload function ,and
show only one photo on the page.

--- a/dcool/src/main/resources/application.properties
+++ b/dcool/src/main/resources/application.properties
@@ -39,7 +39,10 @@ spring.servlet.multipart.max-request-size=100Mb
 #是否在文件或参数访问时懒惰地解析多部分请求
 spring.servlet.multipart.resolve-lazily=false
 
-#图片上传路径映射 自定义属性
-upload.picture.path=D:/springboot/upload/
+#自定义属性
+#图片上传路径映射
+upload.photo.path=D:/springboot/upload/
+#音乐上传路径映射
+upload.music.path=D:/springboot/upload/
 
 
