--- a/dcool/src/main/resources/application.properties
+++ b/dcool/src/main/resources/application.properties
@@ -39,6 +39,20 @@ spring.servlet.multipart.max-request-size=100Mb
 #是否在文件或参数访问时懒惰地解析多部分请求
 spring.servlet.multipart.resolve-lazily=false
 
+#shiro
+#是否启用shiro的spring web模块
+shiro.web.enabled=true
+#未经身份验证的用户重定向到登录页面时使用的登录URL
+shiro.loginUrl=/welcome.html
+#启用会话ID到cookie，用于会话跟踪
+shiro.sessionManager.sessionIdCookieEnabled=true
+#启用会话URL重写支持
+shiro.sessionManager.sessionIdUrlRewritingEnabled=true
+#页面将用户重定向到未授权的位置（403页）
+#shiro.unauthorizedUrl=
+#用户登录后的默认登录页面（如果在当前会话中找不到替代）
+#shiro.successUrl=/
+
 #自定义属性
 #图片上传路径映射
 upload.photo.path=D:/springboot/upload/
